kube/ingress/ingress-elastic-search.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic-cluster
  namespace: elastic-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - elasticsearch.orch-team-d.pns-projects.fr.eu.org
    secretName: elastic-cluster-es-http-certs-public
  rules:
  - host: elastic.orch-team-d.pns-projects.fr.eu.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elastic-cluster-es-http
            port:
              number: 9200
