kube/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - host: polymetrie.orch-team-d.pns-projects.fr.eu.org
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: polymetrie-service
            port:
              number: 80
